# gitlab-rs

./: Cargo.toml  README.md
derive-macro/: Cargo.toml
derive-macro/src/: lib.rs
derive-macro/tests/: test.rs
src/: gitlab.rs  http_client.rs  lib.rs  restful.rs
src/access_requests/: group.rs  mod.rs
src/common_resources/: access_request.rs  access_requests.rs  merge_requests.rs  mod.rs  payload.rs
src/group_resources/: access_request.rs  access_requests.rs  mod.rs
src/project_resources/: access_request.rs  access_requests.rs  access_tokens.rs  mod.rs
src/standalone_resources/: merge_requests.rs  mod.rs
