[package]
name = "gitlab"
version = "0.1.0"
authors = ["whiteCcinn <471113744@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
# parse config
config = "0.10"
## logger
log4rs="0.13"