[package]
name = "gitlab"
version = "0.1.0"
authors = ["whiteCcinn <471113744@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
log = "0.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
# parse config
config = "0.10"
## logger
log4rs="0.13"
url = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
num-derive = "0.2"
derive-macro = { path = "derive-macro" }